# chess_game

./: .gitignore  CMakeLists.txt  Chess_engine  Chess_game  Makefile  README.md
include/: direction.h  game.h  interface.h  logger.h  move.h  piece.h  pieces.h  player.h  playerengineminimax.h  playerenginerandom.h  playerhuman.h  position.h  state.h  testsuite.h
source/: game.cc  interface.cc  main.cc  playerengineminimax.cc  state.cc  testsuite.cc
